<resources>
    <string name="app_name">Bus Transport Contact Tracing App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="dashboard_fragment_label">First Fragment</string>
    <string name="history_fragment_label">Histories</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOG-IN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="history">History</string>
    <string name="scan">Scan QR Code</string>
    <string name="account_setting">Account Setting</string>
    <string name="title_activity_scanner">Scanner</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="condition_title">SYMPTOMPS YOU ARE CURRENTLY EXPERIENCING:</string>
    <string name="no_account">No Account? Register Here!</string>
    <string name="action_logout">Log out</string>
    <string name="back">Back</string>
    <string name="prompt_username">User Name</string>
    <string name="start_route">Start Route</string>
    <string name="destination_route">Destination Route</string>
    <string name="temp">Temperature</string>
</resources>